[tool.poetry]
name = "flask-auth"
version = "0.1.0"
description = ""
authors = ["Gabriel Carneiro <gabrielcarneirocef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"
Flask-Marshmallow = "^0.11.0"
Flask-RESTful = "^0.3.8"
marshmallow-sqlalchemy = "^0.22.3"
Flask-Migrate = "^2.5.3"
python-dotenv = "^0.12.0"
mypy = "^0.770"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
